2002-08-20  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-link-desktop-file.c:
	* libnautilus-private/nautilus-link-desktop-file.h:
	New function nautilus_link_desktop_file_local_is_utf8.

	* libnautilus-private/nautilus-link.c:
	* libnautilus-private/nautilus-link.h:
	New function nautilus_link_local_is_utf8.
	
	* src/file-manager/fm-desktop-icon-view.c
	(update_desktop_directory):
	Recreate trash and homedir links if they are not in utf8.

2002-08-15  Dave Camp  <dave@ximian.com>

	* libnautilus/nautilus-clipboard.c (select_all_callback): Save the 
	source so the idle callback can cancel the weak ref.
	(select_all_idle_callback): Cancel the weak ref so the source
	isn't destroyed twice.
	This should fix #74403.

2002-08-15  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (icon_set_position):
	Work around our strange size allocation problems by always assuming
	the size of fixed_size containers is the size of the screen.
	This fixes the problem where all desktop icons end up in a pile in the
	top left corner on startup.
	We really need to fix our size allocation.

2002-08-14  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-container.c: 
	(nautilus_icon_container_class_init): Install a frame_text gtk
	style property, so that accessible themes can force the icon
	container to put a frame around unselected text.
	(setup_label_gcs): Use text[SELECTED] for the highlight text
	color, since it is now displayed against base[SELECTED].  If
	frame_text is set, use text[NORMAL] for normal text, since it will
	be displayed against base[NORMAL].
	(nautilus_icon_container_set_use_drop_shadows): If frame_text is
	set, don't enable drop shadows, but save that they were requested.
	(style_set): Update use_drop_shadows based on whether frame_text
	is set and whether drop shadows were requested.
	(nautilus_icon_container_theme_changed): Call setup_label_gcs().
