@@ -1,3 +1,10 @@
+2002-08-21  Michael Meeks  <michael@ximian.com>
+
+	* libnautilus-private/nautilus-icon-factory.c
+	(nautilus_icon_factory_get_icon_for_file): fix
+	in-icon svg rendering, also obey thumbnailing
+	preferences for svg files (!).
+
 2002-08-20  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-link-desktop-file.c:
